# SITCONCamp2023-special-sql-bot

./: .gitignore  README.md  app.py  pyproject.toml
database/: __init__.py  init.sql
